--- a/BeerApp/BeerApp.csproj
+++ b/BeerApp/BeerApp.csproj
@@ -204,7 +204,7 @@
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
-    <Content Include="MyScripts\Ingredients.js" />
+    <Content Include="MyScripts\beerController.js" />
     <Content Include="Scripts\angular-animate.js" />
     <Content Include="Scripts\angular-animate.min.js" />
     <Content Include="Scripts\angular-aria.js" />
